kubernetes/apps/n8n/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
